[Add] Query parameter for GET Sponsor
