# api.yaml
@@ -133,8 +133,8 @@ paths:
       tags:
         - Sponsor
       parameters:
-        - name: filter
-          description: name filter/search?
+        - name: name
+          description: Filter by name of sponsor
           schema:
             type: string
           in: query
@@ -143,6 +143,12 @@ paths:
           schema:
             type: string
           in: query
+        - name: club
+          description: Filter by associated club
+          schema:
+            type: string
+          in: query
+          required: false
       responses:
         '200':
           content:
@@ -158,6 +164,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
           description: Not found
+      security:
+        - firebase-key: []
       operationId: GET_SPONSOR
       summary: Get sponsors
       description: Get all sponsors, sponsor of a discount, and filtered.
@@ -572,6 +580,7 @@ components:
         - sponsorName
         - sponsorDesc
         - tier
+        - clubs
       type: object
       properties:
         uuid:
@@ -591,6 +600,12 @@ components:
           description: Facebook information
         tier:
           description: tier
+          enum:
+            - '1'
+            - '2'
+            - '3'
+            - '4'
+          type: string
         twitterHandle:
           $ref: '#/components/schemas/Socials'
           description: Twitter information
@@ -601,12 +616,12 @@ components:
           description: Website link
           type: string
         discountOffered:
-          description: Discount that is offered
+          description: The IDs of the discounts offered by the sponsor
           type: array
           items:
             type: string
         clubs:
-          description: Gets information from club
+          description: The IDs of the clubs which are associated with the sponsor
           type: array
           items:
             type: string
@@ -696,6 +711,51 @@ components:
           enum:
             - Undergraduate
             - Postgraduate
+          type: string
+    POST-Sponsor:
+      description: Data type to store sponsors using the UADS App
+      required:
+        - sponsorName
+        - sponsorDesc
+        - tier
+      type: object
+      properties:
+        sponsorName:
+          description: The name of the sponsor
+          type: string
+        sponsorDesc:
+          description: The description of the sponsor
+          type: string
+        instagramHandle:
+          $ref: '#/components/schemas/Socials'
+          description: Instagram information
+        facebookHandle:
+          $ref: '#/components/schemas/Socials'
+          description: Facebook information
+        tier:
+          description: tier
+          enum:
+            - '1'
+            - '2'
+            - '3'
+            - '4'
+          type: string
+        twitterHandle:
+          $ref: '#/components/schemas/Socials'
+          description: Twitter information
+        address:
+          $ref: '#/components/schemas/Address'
+          description: Address information
+        websiteUrl:
+          description: Website link
+          type: string
+        clubs:
+          description: The IDs of the clubs which are associated with the sponsor
+          type: array
+          items:
+            type: string
+        sponsorRepName:
+          description: Rep of the sponsor
           type: string
   securitySchemes:
     firebase-key:
