# src/interface/api.ts
@@ -14,12 +14,6 @@ export interface paths {
     /** Deleting a specific event type */
     delete: operations['DELETE_EVENT'];
   };
-  '/user': {
-    /** Get all users / get all users in a particular club */
-    get: operations['GET_USER'];
-    /** Create user upon registration */
-    post: operations['POST_USER'];
-  };
   '/club': {
     /** Get all clubs, and club by name. */
     get: operations['GET_CLUB'];
@@ -56,20 +50,26 @@ export interface paths {
     /** Deleting offers in UADS. */
     delete: operations['DELETE_DISCOUNT'];
   };
-  '/user/{id}': {
-    get: operations['GET_USER_ID'];
-    /** Change user */
-    put: operations['PUT_USER'];
-    /** Allows to delete user from UADS. */
-    delete: operations['DELETE_USER'];
+  '/club/{id}': {
+    put: operations['GET_CLUB_ID'];
     parameters: {
       path: {
         id: number;
       };
     };
   };
-  '/club/{id}': {
-    put: operations['GET_CLUB_ID'];
+  '/users': {
+    /** Get all users / get all users in a particular club */
+    get: operations['GET_USER'];
+    /** Create user upon registration */
+    post: operations['POST_USER'];
+  };
+  '/users/{id}': {
+    get: operations['GET_USER_ID'];
+    /** Change user */
+    put: operations['PUT_USER'];
+    /** Allows to delete user from UADS. */
+    delete: operations['DELETE_USER'];
     parameters: {
       path: {
         id: number;
@@ -116,12 +116,6 @@ export interface components {
       /** The UUID of club(s) hosting the event */
       club: string[];
     };
-    /** A user of the app */
-    User: {
-      /** > uuid of the users */
-      uuid: string;
-      name?: { [key: string]: unknown };
-    };
     /** Discounts */
     Discount: {
       /** The description of the discount */
@@ -132,13 +126,6 @@ export interface components {
       sponsor: string;
       /** The value of the discount */
       value: number;
-    };
-    /** Item not found */
-    'Error-Response': {
-      /** Item not found */
-      Success?: boolean;
-      /** Error-Message */
-      Message?: string;
     };
     /** Object Type */
     Socials: {
@@ -160,16 +147,16 @@ export interface components {
       /** Facebook information */
       facebookHandle?: components['schemas']['Socials'];
       /** tier */
-      tier: { [key: string]: unknown };
+      tier: '1' | '2' | '3' | '4';
       /** Twitter information */
       twitterHandle?: components['schemas']['Socials'];
       /** Address information */
       address?: components['schemas']['Address'];
       /** Website link */
       websiteUrl?: string;
-      /** Discount that is offered */
+      /** The IDs of the discounts offered by the sponsor */
       discountOffered?: string[];
-      /** Gets information from club */
+      /** The IDs of the clubs which are associated with the sponsor */
       clubs?: string[];
       /** Rep of the sponsor */
       sponsorRepName?: string;
@@ -182,6 +169,41 @@ export interface components {
       streetName?: string;
       /** The city location */
       city?: string;
+    };
+    /** Item not found */
+    Error: {
+      /** Error Status */
+      status?: number;
+      /** Error Message */
+      message?: string;
+    };
+    /** Data type to represent the membership status of a user */
+    'Club-membership': {
+      /** The acronym of the club */
+      club: string;
+      /** The start date of the membership */
+      start: string;
+      /** The end date of the membership */
+      end?: string;
+      /** boolean to represent if membership is active */
+      'is-active': boolean;
+    };
+    /** User model */
+    User: {
+      /** The UPI of the student */
+      upi: string;
+      /** The UUID of the student */
+      uuid: string;
+      /** The first name of the student */
+      'first-name': string;
+      /** The last name of the user */
+      'last-name': string;
+      /** The unversity which the user attends */
+      university?: string;
+      /** The acronym of the club(s) which the user is a member of */
+      'club-membership'?: components['schemas']['Club-membership'][];
+      /** The status of the user */
+      'grad-level'?: 'Undergraduate' | 'Postgraduate';
     };
   };
 }
@@ -229,42 +251,6 @@ export interface operations {
       200: unknown;
       /** An error has occurred. */
       404: unknown;
-    };
-  };
-  /** Get all users / get all users in a particular club */
-  GET_USER: {
-    parameters: {
-      query: {
-        /** the members of a given club */
-        club?: string;
-        /** the members of a university */
-        university?: string;
-        /** get members by graduation level */
-        gradlevel?: string;
-      };
-    };
-    responses: {
-      /** success */
-      200: {
-        content: {
-          'application/json': components['schemas']['User'][];
-        };
-      };
-    };
-  };
-  /** Create user upon registration */
-  POST_USER: {
-    responses: {
-      /** Success */
-      201: unknown;
-      /** fails */
-      404: unknown;
-    };
-    /** User to be added */
-    requestBody: {
-      content: {
-        'application/json': components['schemas']['User'];
-      };
     };
   };
   /** Get all clubs, and club by name. */
@@ -316,10 +302,12 @@ export interface operations {
   GET_SPONSOR: {
     parameters: {
       query: {
-        /** name filter/search? */
-        filter?: string;
+        /** Filter by name of sponsor */
+        name?: string;
         /** Get by discount */
         discount?: string;
+        /** Filter by associated club */
+        club?: string;
       };
     };
     responses: {
@@ -332,7 +320,7 @@ export interface operations {
       /** Not found */
       404: {
         content: {
-          'application/json': components['schemas']['Error-Response'];
+          'application/json': components['schemas']['Error'];
         };
       };
     };
@@ -345,7 +333,7 @@ export interface operations {
       /** An error has occurred. */
       404: {
         content: {
-          'application/json': components['schemas']['Error-Response'];
+          'application/json': components['schemas']['Error'];
         };
       };
     };
@@ -355,10 +343,16 @@ export interface operations {
     responses: {
       /** Successfully posts sponsor */
       200: unknown;
+      /** Invalid request when creating sponsor */
+      400: {
+        content: {
+          'application/json': components['schemas']['Error'];
+        };
+      };
       /** Error has occurred */
       404: {
         content: {
-          'application/json': components['schemas']['Error-Response'];
+          'application/json': components['schemas']['Error'];
         };
       };
     };
@@ -376,7 +370,7 @@ export interface operations {
       /** An error has occurred. */
       404: {
         content: {
-          'application/json': components['schemas']['Error-Response'];
+          'application/json': components['schemas']['Error'];
         };
       };
     };
@@ -421,6 +415,65 @@ export interface operations {
     responses: {
       /** Successfully deleted offer */
       200: unknown;
+    };
+  };
+  GET_CLUB_ID: {
+    parameters: {
+      path: {
+        id: string;
+      };
+    };
+    responses: {
+      /** Good */
+      200: unknown;
+    };
+  };
+  /** Get all users / get all users in a particular club */
+  GET_USER: {
+    parameters: {
+      query: {
+        /** the members of a given club */
+        club?: string;
+        /** the members of a university */
+        university?: string;
+        /** get members by graduation level */
+        'grad-level'?: string;
+      };
+    };
+    responses: {
+      /** success */
+      200: {
+        content: {
+          'application/json': components['schemas']['User'][];
+        };
+      };
+      /** Action not authorized */
+      401: {
+        content: {
+          'application/json': components['schemas']['Error'];
+        };
+      };
+      /** No users found */
+      404: {
+        content: {
+          'application/json': components['schemas']['Error'];
+        };
+      };
+    };
+  };
+  /** Create user upon registration */
+  POST_USER: {
+    responses: {
+      /** Success */
+      201: unknown;
+      /** fails */
+      404: unknown;
+    };
+    /** User to be added */
+    requestBody: {
+      content: {
+        'application/json': components['schemas']['User'];
+      };
     };
   };
   GET_USER_ID: {
@@ -480,17 +533,6 @@ export interface operations {
       200: unknown;
       /** An error has occurred. */
       404: unknown;
-    };
-  };
-  GET_CLUB_ID: {
-    parameters: {
-      path: {
-        id: string;
-      };
-    };
-    responses: {
-      /** Good */
-      200: unknown;
     };
   };
 }
